<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MenuActivity" android:background="@color/colorPrimary">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp" app:srcCompat="@drawable/wheat"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="100dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="TODO"/>
    <TextView
            android:text="@string/chrl_clicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:textSize="35sp"
            android:textColor="@color/colorAccent" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:fontFamily="serif" android:textAlignment="center"/>
    <Button
            android:text="@string/new_game"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/newGameButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="100dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.501"/>
    <Button
            android:text="Continue"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/continueButton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.501" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/newGameButton" android:visibility="invisible"/>
    <Button
            android:text="@string/ranking"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/rankingButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/newGameButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/options"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/optionsButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/rankingButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/exit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/exitButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/optionsButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/_2019"
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/exitButton" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="189dp"
            android:layout_marginEnd="190dp" app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>