<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/game_activity"
        tools:context=".activity.GameActivity" android:background="#005F1E1E">
    <Button
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/button_cookie" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:background="@drawable/symbol" android:height="40dp"
            android:width="30dp" android:textColor="#EDE7F6" android:textSize="18sp" android:clickable="true"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    <TextView
            android:text="@string/currentPointsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yourPoints"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintTop_toBottomOf="@+id/button_cookie"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pointsIncrementor" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/yourPoints" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:text="@string/pointsIncrementorView"
            app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/clickACookie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/button_cookie" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>